--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.689.0",
     "@aws-sdk/lib-dynamodb": "^3.689.0",
+    "aws-sdk": "^2.1526.0",
     "@clerk/express": "^1.7.42",
     "@sentry/node": "^10.21.0",
     "@sentry/profiling-node": "^10.21.0",
